# SurfaceVectorFieldDecomposition

./: CMakeLists.txt  README.md
resources/: MyIcons.pptx
src/: Intersections.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  Polyhedron.cpp  Polyhedron.h  RenderModule.cpp  RenderModule.h  Viewer.cpp  Viewer.h
